-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.7.0
-
None
-
b0ded652d (dev)
Steps to reproduce in widgetgraphgallery:
- go to Scatter Graph
- change dot style to Point
- select a point
- rotate graph
-> selected point is not rotated with others
For Gerrit Dashboard: QTBUG-117767 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
509780,2 | Rotate selection indicator in default optimization | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |