Rotate selection indicator in default optimization

Fixes: QTBUG-117767
Change-Id: I57ee710953ac5ea65b341635f802464c887233a5
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>